--- a/src/pages/character-languages/character-languages.html
+++ b/src/pages/character-languages/character-languages.html
@@ -5,27 +5,25 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page8">
-  <form id="characterLanguages-form6">
-    <ion-list id="characterLanguages-list4">
-      <ion-list id="characterLanguages-list5">
+<ion-content padding id="characterLanguages">
+  <form id="characterLanguages-form">
+    <ion-list id="characterLanguages-list">
         <ion-item-sliding>
-          <ion-item color="none" id="characterLanguages-list-item8">
+          <ion-item color="none" id="characterLanguages-list-item">
             Add Language
-            <ion-note item-right></ion-note>
+            <ion-note item-right>Swipe left</ion-note>
           </ion-item>
           <ion-item-options side="left">
-            <button ion-button color="balanced">
+            <button ion-button color="secondary">
               Add
             </button>
-            <button ion-button color="assertive">
+            <button ion-button color="danger">
               Remove
             </button>
           </ion-item-options>
         </ion-item-sliding>
-      </ion-list>
     </ion-list>
-    <button id="characterLanguages-button10" ion-button color="stable" block on-click="goToCharacterAdvantages()">
+    <button id="characterLanguages-button" ion-button color="stable" block on-click="goToCharacterSkills()">
       Proceed
     </button>
   </form>
