--- a/src/pages/character-resume/character-resume.html
+++ b/src/pages/character-resume/character-resume.html
@@ -5,22 +5,22 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page11">
-  <div id="characterResume-markdown2" class="show-list-numbers-and-dots">
+<ion-content padding id="characterResume">
+  <div id="characterResume-markdown" class="show-list-numbers-and-dots">
     <p style="color:#000000;">
       <em>
         List the resume of the char
       </em>
     </p>
   </div>
-  <form id="characterResume-form9">
-    <button id="characterResume-button13" ion-button color="balanced" block on-click="goToGurpsManager()">
+  <form id="characterResume-form">
+    <button id="characterResume-button" ion-button color="secondary" block on-click="goToTabsController()">
       Create Character
     </button>
-    <button id="characterResume-button14" ion-button color="energized" block on-click="goToCharacterFeatures()">
+    <button id="characterResume-button" ion-button color="alert" block on-click="goToCharacterFeatures()">
       Edit Character
     </button>
-    <button id="characterResume-button15" ion-button color="assertive" block on-click="goToGurpsManager()">
+    <button id="characterResume-button" ion-button color="danger" block on-click="goToGurpsManager()">
       Cancel
     </button>
   </form>
