--- a/src/pages/character-skills/character-skills.html
+++ b/src/pages/character-skills/character-skills.html
@@ -1,16 +1,16 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Character Disadvantages
+      Character Skills
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="characterDisadvantages">
-  <form id="characterDisadvantages-form">
-    <ion-list id="characterDisadvantages-list">
+<ion-content padding id="characterSkills">
+  <form id="characterSkills-form">
+    <ion-list id="characterSkills-list">
         <ion-item-sliding>
-          <ion-item color="none" id="characterDisadvantages-list-item">
-            Add Disadvantages
+          <ion-item color="none" id="characterSkills-list-item">
+            Add Language
             <ion-note item-right>Swipe left</ion-note>
           </ion-item>
           <ion-item-options side="left">
@@ -22,8 +22,8 @@
             </button>
           </ion-item-options>
         </ion-item-sliding>
-      </ion-list>
-    <button id="characterDisadvantages-button" ion-button color="stable" block on-click="goToCharacterResume()">
+    </ion-list>
+    <button id="characterSkills-button" ion-button color="stable" block on-click="goToCharacterAdvantages()">
       Proceed
     </button>
   </form>
