--- a/src/pages/gurps-manager/gurps-manager.html
+++ b/src/pages/gurps-manager/gurps-manager.html
@@ -5,16 +5,16 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page5">
-  <button id="gurpsManager-button5" ion-button color="positive" block on-click="goToCharacterFeatures()">
+<ion-content padding id="gurpsManager">
+  <button id="gurpsManager-create_character" ion-button color="secondary" block on-click="goToCharacterFeatures()">
     Create Character
   </button>
-  <form id="gurpsManager-form3">
-    <button id="gurpsManager-button6" ion-button color="positive" block>
+  <form id="gurpsManager-form">
+    <button id="gurpsManager-load_character" ion-button color="primary" block on-click="goToTabsController()">
       Resume Character
     </button>
-    <ion-list id="gurpsManager-list2">
-      <ion-item color="none" id="gurpsManager-list-item4">
+    <ion-list id="gurpsManager-_list_character">
+      <ion-item color="none" id="gurpsManager-list-item">
         #char-list
       </ion-item>
     </ion-list>
