--- a/src/pages/character-advantages/character-advantages.html
+++ b/src/pages/character-advantages/character-advantages.html
@@ -5,27 +5,25 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page9">
-  <form id="characterAdvantages-form7">
-    <ion-list id="characterAdvantages-list7">
-      <ion-list id="characterAdvantages-list6">
+<ion-content padding id="characterAdvantages">
+  <form id="characterAdvantages-form">
+    <ion-list id="characterAdvantages-list">
         <ion-item-sliding>
-          <ion-item color="none" id="characterAdvantages-list-item11">
-            Add Language
-            <ion-note item-right></ion-note>
+          <ion-item color="none" id="characterAdvantages-list-item">
+            Add Advantage
+            <ion-note item-right>Swipe left</ion-note>
           </ion-item>
           <ion-item-options side="left">
-            <button ion-button color="balanced">
+            <button ion-button color="secondary">
               Add
             </button>
-            <button ion-button color="assertive">
+            <button ion-button color="danger">
               Remove
             </button>
           </ion-item-options>
         </ion-item-sliding>
       </ion-list>
-    </ion-list>
-    <button id="characterAdvantages-button11" ion-button color="stable" block on-click="goToCharacterDisadvantages()">
+    <button id="characterAdvantages-button" ion-button color="stable" block on-click="goToCharacterDisadvantages()">
       Proceed
     </button>
   </form>
