--- a/src/pages/character-features/character-features.html
+++ b/src/pages/character-features/character-features.html
@@ -5,59 +5,59 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page6">
-  <form id="characterFeatures-form4">
-    <ion-list id="characterFeatures-list3">
-      <ion-item id="characterFeatures-input7">
+<ion-content padding id="character-features">
+  <form id="characterFeatures-form">
+    <ion-list id="characterFeatures-list">
+      <ion-item id="characterFeatures-char_name">
         <ion-label>
           *Name
         </ion-label>
-        <ion-input type="text" placeholder="" name="char_name"></ion-input>
+        <ion-input type="text" aria-required="true" placeholder="" name="char_name"></ion-input>
       </ion-item>
-      <ion-item id="characterFeatures-input15">
+      <ion-item id="characterFeatures-char_age">
         <ion-label>
           Age
         </ion-label>
         <ion-input type="number" placeholder="" name="char_age"></ion-input>
       </ion-item>
-      <ion-item id="characterFeatures-input12">
+      <ion-item id="characterFeatures-char_height">
         <ion-label>
           Height
         </ion-label>
         <ion-input type="number" placeholder="" name="char_height"></ion-input>
       </ion-item>
-      <ion-item id="characterFeatures-input11">
+      <ion-item id="characterFeatures-char_weight">
         <ion-label>
           Weight
         </ion-label>
         <ion-input type="number" placeholder="" name="char_weight"></ion-input>
       </ion-item>
-      <ion-item id="characterFeatures-input14">
+      <ion-item id="characterFeatures-char_min_status">
         <ion-label>
           *Minimun Status Points
         </ion-label>
-        <ion-input type="number" placeholder="" name="char_min_stats_points"></ion-input>
+        <ion-input type="number" aria-required="true" placeholder="" name="char_min_stats_points"></ion-input>
       </ion-item>
-      <ion-item id="characterFeatures-input16">
+      <ion-item id="characterFeatures-char_max_points">
         <ion-label>
           *Max Points
         </ion-label>
-        <ion-input type="number" placeholder="" name="char_points"></ion-input>
+        <ion-input type="number" aria-required="true" placeholder="" name="char_points"></ion-input>
       </ion-item>
-      <ion-item id="characterFeatures-input13">
+      <ion-item id="characterFeatures-char_resource">
         <ion-label>
           *Inicial Resource
         </ion-label>
-        <ion-input type="number" placeholder="" name="char_age"></ion-input>
+        <ion-input type="number" aria-required="true" placeholder="" name="char_age"></ion-input>
       </ion-item>
-      <ion-item id="characterFeatures-input10">
+      <ion-item id="characterFeatures-char_description">
         <ion-label>
           Description
         </ion-label>
         <ion-input type="text" placeholder="" name="char_description"></ion-input>
       </ion-item>
     </ion-list>
-    <button id="characterFeatures-button7" ion-button color="stable" block on-click="goToCharacterStatus()">
+    <button id="characterFeatures-button" ion-button color="stable" block on-click="goToCharacterStatus()">
       Proceed
     </button>
   </form>
