--- a/src/pages/tabs-controller/tabs-controller.html
+++ b/src/pages/tabs-controller/tabs-controller.html
@@ -1,8 +1,8 @@
-<ion-tabs id="tabsController-tabs1">
-  <ion-tab [root]="tab1Root" tabTitle="Tests" tabIcon="cube" id="tabsController-tab1"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Status" tabIcon="stats" id="tabsController-tab2"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Extras" tabIcon="bookmark" id="tabsController-tab3"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Equipments" tabIcon="body" id="tabsController-tab4"></ion-tab>
-  <ion-tab [root]="tab5Root" tabTitle="Inventory" tabIcon="briefcase" id="tabsController-tab5"></ion-tab>
-  <ion-tab [root]="tab6Root" tabTitle="Skills" tabIcon="hand" id="tabsController-tab6"></ion-tab>
+<ion-tabs id="tabsController-tabs">
+  <ion-tab [root]="tabsController-tests" tabTitle="Tests" tabIcon="cube" id="tabsController-tests"></ion-tab>
+  <ion-tab [root]="tabsController-status" tabTitle="Status" tabIcon="stats" id="tabsController-status"></ion-tab>
+  <ion-tab [root]="tabsController-extras" tabTitle="Extras" tabIcon="bookmark" id="tabsController-extras"></ion-tab>
+  <ion-tab [root]="tabsController-equipments" tabTitle="Equipments" tabIcon="body" id="tabsController-equipments"></ion-tab>
+  <ion-tab [root]="tabsController-inventory" tabTitle="Inventory" tabIcon="briefcase" id="tabsController-inventory"></ion-tab>
+  <ion-tab [root]="tabsController-skills" tabTitle="Skills" tabIcon="hand" id="tabsController-skills"></ion-tab>
 </ion-tabs>
