--- a/src/pages/tabs-controller/tabs-controller.html
+++ b/src/pages/tabs-controller/tabs-controller.html
@@ -1,8 +1,8 @@
 <ion-tabs id="tabsController-tabs">
-  <ion-tab [root]="tabsController-tests" tabTitle="Tests" tabIcon="cube" id="tabsController-tests"></ion-tab>
-  <ion-tab [root]="tabsController-status" tabTitle="Status" tabIcon="stats" id="tabsController-status"></ion-tab>
-  <ion-tab [root]="tabsController-extras" tabTitle="Extras" tabIcon="bookmark" id="tabsController-extras"></ion-tab>
-  <ion-tab [root]="tabsController-equipments" tabTitle="Equipments" tabIcon="body" id="tabsController-equipments"></ion-tab>
-  <ion-tab [root]="tabsController-inventory" tabTitle="Inventory" tabIcon="briefcase" id="tabsController-inventory"></ion-tab>
-  <ion-tab [root]="tabsController-skills" tabTitle="Skills" tabIcon="hand" id="tabsController-skills"></ion-tab>
+  <ion-tab [root]="tests" tabTitle="Tests" tabIcon="cube" id="tabsController-tests"></ion-tab>
+  <ion-tab [root]="status" tabTitle="Status" tabIcon="stats" id="tabsController-status"></ion-tab>
+  <ion-tab [root]="extras" tabTitle="Extras" tabIcon="bookmark" id="tabsController-extras"></ion-tab>
+  <ion-tab [root]="equipments" tabTitle="Equipments" tabIcon="body" id="tabsController-equipments"></ion-tab>
+  <ion-tab [root]="inventory" tabTitle="Inventory" tabIcon="briefcase" id="tabsController-inventory"></ion-tab>
+  <ion-tab [root]="skills" tabTitle="Skills" tabIcon="hand" id="tabsController-skills"></ion-tab>
 </ion-tabs>
