Started implementing data sharing

--- a/src/pages/character-features/character-features.html
+++ b/src/pages/character-features/character-features.html
@@ -6,58 +6,58 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="character-features">
-  <form id="characterFeatures-form">
+  <form id="characterFeatures-form" (ngSubmit)="goToCharacterStatus()">
     <ion-list id="characterFeatures-list">
       <ion-item id="characterFeatures-char_name">
         <ion-label>
           *Name
         </ion-label>
-        <ion-input type="text" aria-required="true" placeholder="" name="char_name"></ion-input>
+        <ion-input [(ngModel)]="new_char.char_name" [ngModelOptions]="{standalone: true}" type="text" placeholder="" aria-required="true"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-char_age">
         <ion-label>
           Age
         </ion-label>
-        <ion-input type="number" placeholder="" name="char_age"></ion-input>
+        <ion-input [(ngModel)]="new_char.char_age" [ngModelOptions]="{standalone: true}" type="number" placeholder=""></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-char_height">
         <ion-label>
           Height
         </ion-label>
-        <ion-input type="number" placeholder="" name="char_height"></ion-input>
+        <ion-input [(ngModel)]="new_char.char_height" [ngModelOptions]="{standalone: true}" type="number" placeholder=""></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-char_weight">
         <ion-label>
           Weight
         </ion-label>
-        <ion-input type="number" placeholder="" name="char_weight"></ion-input>
+        <ion-input [(ngModel)]="new_char.char_weight" [ngModelOptions]="{standalone: true}" type="number" placeholder=""></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-char_min_status">
         <ion-label>
           *Minimun Status Points
         </ion-label>
-        <ion-input type="number" aria-required="true" placeholder="" name="char_min_stats_points"></ion-input>
+        <ion-input [(ngModel)]="new_char.char_min_stats_points" [ngModelOptions]="{standalone: true}" type="number" placeholder="" aria-required="true"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-char_max_points">
         <ion-label>
           *Max Points
         </ion-label>
-        <ion-input type="number" aria-required="true" placeholder="" name="char_points"></ion-input>
+        <ion-input [(ngModel)]="new_char.char_points" [ngModelOptions]="{standalone: true}" type="number" placeholder="" aria-required="true"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-char_resource">
         <ion-label>
           *Inicial Resource
         </ion-label>
-        <ion-input type="number" aria-required="true" placeholder="" name="char_age"></ion-input>
+        <ion-input [(ngModel)]="new_char.char_resource" [ngModelOptions]="{standalone: true}" type="number" placeholder="" aria-required="true"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-char_description">
         <ion-label>
           Description
         </ion-label>
-        <ion-input type="text" placeholder="" name="char_description"></ion-input>
+        <ion-input [(ngModel)]="new_char.char_description" [ngModelOptions]="{standalone: true}" type="text" placeholder=""></ion-input>
       </ion-item>
     </ion-list>
-    <button id="characterFeatures-button" ion-button color="stable" block on-click="goToCharacterStatus()">
+    <button id="characterFeatures-button" ion-button color="stable" block type="submit">
       Proceed
     </button>
   </form>
