--- a/src/pages/character-status/character-status.html
+++ b/src/pages/character-status/character-status.html
@@ -8,7 +8,7 @@
 <ion-content padding id="characterStatus">
   <form id="characterStatus-form">
     <ion-item id="characterStatus-range_strenght">
-      <ion-range min="getMaxStatus()" max="getMaxStrenght()" step="1" color="positive" value="50" name="char_strength">
+      <ion-range min="0" max="100" step="1" color="positive" value="50" name="char_strength">
         <ion-label range-left>
           Strength (ST)
         </ion-label>
